--- a/index.html
+++ b/index.html
@@ -130,6 +130,19 @@
             <section class="form-section" aria-labelledby="table-title">
                 <h2 id="table-title">Riesgos Evaluados</h2>
                 
+                <div class="sort-controls" id="sortControls" style="display: none;">
+                    <label>Ordenar por:</label>
+                    <button type="button" class="btn-sort" data-sort="nombre">
+                        Riesgo
+                    </button>
+                    <button type="button" class="btn-sort" data-sort="area">
+                        Área
+                    </button>
+                    <button type="button" class="btn-sort" data-sort="nr">
+                        Nivel de Riesgo
+                    </button>
+                </div>
+                
                 <div id="tablaContainer">
                     <div class="empty-state">
                         <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
